rename data set, correct vignette

--- a/inst/doc/TSSi.Rnw
+++ b/inst/doc/TSSi.Rnw
@@ -57,6 +57,7 @@ set.seed(1)
 options(width=65, SweaveHooks=list(fig=function() par(mar=c(5.1, 5.1, 4.1, 1.5))))
 @
 
+\selectlanguage{english}%
 \begin{abstract}
 Along with the advances in high-throughput sequencing, the detection
 of transcription start sites \emph{(TSS)} using CAP-capture techniques
@@ -70,13 +71,13 @@ for CAP-capture data and an automated identification of start sites.
 
 High throughput sequencing has become an essential experimental approach
 to investigate genomes and transcriptional processes. While cDNA sequencing
-(RNA-seq) using random priming and/or fragmentation of cDNA will result
-in a shallow distribution of reads typically biased towards the 3’
-end, approaches like CAP-capture enrich 5’ ends and result in more
+(\emph{RNA-seq}) using random priming and/or fragmentation of cDNA
+will result in a shallow distribution of reads typically biased towards
+the 3’ end, approaches like CAP-capture enrich 5’ ends and yield more
 clearly distinguishable peaks around the transcription start sites.
 
 Predicting the location of transcription start sites \emph{(TSS)}
-is hampered by the existence of alternative TSS, i.e. their number
+is hampered by the existence of alternative ones since their number
 within regions of transcription is unknown. In addition, measurements
 contain false positive counts. Therefore, only the counts which are
 significantly larger than an expected number of background reads are
@@ -84,7 +85,7 @@ intended to be predicted as TSS. The number of false positive reads
 increases in regions of transcriptional activity and such reads obviously
 do not map to random positions. On the one hand, these reads seem
 to occur sequence dependently and therefore cluster to certain genomic
-positions, on the other hand they are detected more frequently than
+positions, on the other hand, they are detected more frequently than
 being originated from real TSS. Because currently, there is no error
 model available describing such noise, the \Rpackage{TSSi} package
 implements an heuristic approach for an automated and flexible prediction
@@ -93,45 +94,50 @@ of TSS.
 
 \section{Data set}
 
-In this vignette we use experimental CAP-capture data obtained with
-Solexa sequencing. The data was mapped to the genome using the bowtie
-algorithm and processed, such that the number of the 5' end of reads
-for each position are available%
-\footnote{The sequencing workflow at the bioconductor website describes basic
-steps and tools for the import and processing of sequcencing data
-(\url{http://bioconductor.org/help/workflows/high-throughput-sequencing/}).%
-}. The data frame \Rvar{readData} contains the chromosome, the strand,
-the 5' position of the reads, and the total number of reads at that
-position. Further, regions based on existing annotation are also provided
-which are used to divide the data into independent subsets for analysis.
+To demonstrate the functionality and usage of this package experimental
+CAP-capture data obtained with Solexa sequencing is used. The reads
+was mapped to the genome, such that the number of sequenced 5' end
+and their positions in the genome are available%
+\footnote{The \emph{sequencing workflow} at the bioconductor website describes
+basic steps and tools for the import and processing of sequcencing
+data (\url{http://bioconductor.org/help/workflows/high-throughput-sequencing/}).%
+}. The data frame \Rvar{physcoCounts} contains information about the
+chromosome, the strand, the 5' position of the reads, and the total
+number of mapped. Further, regions based on existing annotation are
+also provided which are used to divide the data into independent subsets
+for analysis.
 
-<<load_data>>=
+<<load_package>>=
 library(TSSi)
-data(readData)
-head(readData)
+@
+<<load_data>>=
+data(physcoCounts)
+head(physcoCounts)
+table(physcoCounts$chromosome, physcoCounts$strand)
 @
 
+\selectlanguage{english}%
 
 \section{Segment read data}
 
-As a first step in the analysis, the read data is taken by the \Rmethod{segmentizeCounts}
+As a first step in the analysis, the reads are passed to the \Rmethod{segmentizeCounts}
 method. Here, the data is divided into \emph{segments}, for which
-the following analysis is performed independently. This is done based
-on the information of the chromosomes, the strands, and the optional
-regions. The segmented data is returned as an object of the class
-\Rclass{TssData}.
+the following analysis is performed independently. This is performed
+based on the information about the chromosomes, the strands, and the
+regions of the reads. The segmented data is returned as an object
+of the class \Rclass{TssData}.
 
 <<segmentize>>=
-attach(readData)
+attach(physcoCounts)
 x <- segmentizeCounts(counts=counts, start=start, chr=chromosome, region=region, strand=strand)
-detach(readData)
+detach(physcoCounts)
 x
 @
 
-The final segments and the associated read data can be assessed with
-several \Rmethod{get} methods. The data from individual segments
-can be called either by its name or an index. Each segment can easily
-be visualized with the \Rmethod{plot} method.
+\selectlanguage{english}%
+The segments and the associated read data are accessible through several
+\Rmethod{get} methods. Data from individual segments can be referred
+to by either its name or an index.
 
 
 <<get_segments>>=
@@ -145,6 +151,7 @@ head(start(x, 3))
 head(start(x, names(x)[3]))
 @
 
+\selectlanguage{english}%
 
 \section{Normalization}
 
@@ -153,17 +160,16 @@ zero. This step is intended to eliminate false positive counts as
 well as making further analyzes more robust by reducing the impact
 of large counts. Such a shrinkage or regularization procedure constitutes
 a well-established strategy in statistics to make predictions conservative,
-i.e. to reduce the number of false positive predictions. To enhance
-the shrinkage of isolated counts in comparison to counts in regions
-of strong transcriptional activity, the information of consecutive
+that means to reduce the number of false positive predictions. To
+enhance the shrinkage of isolated counts in comparison to counts in
+regions of strong transcriptional activity, the information of consecutive
 genomic positions in the measurements is regarded by evaluating differences
 between adjacent count estimates.
 
-The computation can be performed with a fast approximation of the
-distribution based on all reads, or fitted explicitly for each segment.
-On platforms supporting the \Rpackage{multicore} package, the fitting
-can be spread over multiple processor cores in order to decrease computation
-time.
+The computation can be performed with a approximation based on the
+frequency of all reads or fitted explicitly for each segment. On platforms
+supporting the \Rpackage{multicore} package, the fitting can be spread
+over multiple processor cores in order to decrease computation time.
 
 <<normalize_ratio>>=
 yRatio <- normalizeCounts(x)
@@ -179,6 +185,7 @@ head(reads(yFit, 3))
 plot(yFit, 3)
 @
 
+\selectlanguage{english}%
 
 \section{Identifying transcription start sites}
 
@@ -209,16 +216,18 @@ head(reads(z, 3))
 plot(z, 3)
 @
 
+\selectlanguage{english}%
 
-\section{Customizing figures}
+\section{Visualizing and customizing figures}
 
-The \Rmethod{plot} method allows for a simple, but powerful customization
-of the produced figures. To each element of the graphic, all possible
-arguments can be set, supplying them in the form of named lists. In
-the following, we omit the the plotting of the threshold and the ratio
-estimates, as well as adapt the representation of some components.
-For a detailed description on the individual settings, please refer
-to the \Rmethod{plot} documentation of this package.
+The \Rmethod{plot} method allows for a simple, but powerful visualization
+and customization of the produced figures. For each element of the
+figure, all graphical parameters can be set, supplying them in the
+form of named lists. In the following, plotting of the threshold and
+the ratio estimates are omitted, as well as the representation of
+some components is adapted. For a detailed description on the individual
+settings, please refer to the \Rmethod{plot} documentation of this
+package.
 
 
 <<plot_custom, fig=TRUE, echo=TRUE>>=
@@ -231,6 +240,7 @@ countsArgs=list(type="h", col="darkgray", pch=NA),
 plotArgs=list(xlab="Genomic position", main="TSS for segment 's1_-_155'"))
 @
 
+\selectlanguage{english}%
 
 \section{Converting and exporting results}
 
@@ -255,6 +265,7 @@ export.bed(segmentsRd, paste(tmpFile, "bed", sep="."))
 export.bed(tssRd, paste(tmpFile, "bed", sep="."))
 @
 
+\selectlanguage{english}%
 \newpage{}
 
 
