--- a/inst/doc/TSSi.lyx
+++ b/inst/doc/TSSi.lyx
@@ -215,10 +215,10 @@ Data set
 \end_layout
 
 \begin_layout Standard
-To demonstrate the functionality and usage of this package experimental
+To demonstrate the functionality and usage of this package, experimental
  CAP-capture data obtained with Solexa sequencing is used.
- The reads was mapped to the genome, such that the number of sequenced 5'
- end and their positions in the genome are available
+ The reads were mapped to the genome, such that the number of sequenced
+ 5' ends and their positions in the genome are available
 \begin_inset Foot
 status collapsed
 
@@ -258,10 +258,10 @@ Rvar{physcoCounts}
 
 \end_inset
 
- contains information about the chromosome, the strand, the 5' position
- of the reads, and the total number of mapped.
- Further, regions based on existing annotation are also provided which are
- used to divide the data into independent subsets for analysis.
+ contains information about the chromosome, the strand, the 5' position,
+ and the total number of mapped reads.
+ Additionally, regions based on existing annotation are provided which are
+ used here to divide the data into independent subsets for analysis.
 \end_layout
 
 \begin_layout Chunk
